# micetrap.c

./: .gitignore  Makefile  Makefile.am  Makefile.in  Readme.md  aclocal.m4  autogen.sh  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  log.h  main.c  micetrap.c  server.c  server.h  service.c  service.h  utils.c  utils.h
tests/: Makefile  Makefile.am  Makefile.in  check_micetrap  check_micetrap.c
tests/.deps/: check_micetrap-check_micetrap.Po  check_micetrap.Po
