# ACLOCAL_AMFLAGS = -I m4
# 
SUBDIRS = src . tests
# 
# INCLUDES                    = @CHECK_CFLAGS@
# 
# TESTS                       = check_micetrap
# 
# noinst_PROGRAMS             = $(TESTS)
# check_micetrap_SOURCES      = check_micetrap.c
# check_micetrap_LDADD        = @CHECK_LIBS@ check_hello.o
# CLEANFILES                  = check_micetrap.log
# 
# check_%.o : $(srcdir)/%.c
# 	$(COMPILE) -DCHECKING -c -o $@ $^
