## Process this file with automake to produce Makefile.in

TESTS = check_micetrap
check_PROGRAMS = check_micetrap
check_micetrap_SOURCES = check_micetrap.c $(top_builddir)/src/micetrap.h
check_micetrap_CFLAGS = $(CHECK_CFLAGS)
check_micetrap_LDADD = $(CHECK_LIBS)
# check_micetrap_LDADD = $(top_builddir)/src/libmicetrap.la @CHECK_LIBS@
